--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "mongoose": "^5.11.11",
+    "mysql": "^2.18.1",
     "nodemon": "^1.19.4"
   }
 }
